<resources>
    <string name="app_name">FamilyAlarm</string>
    <string name="logo">Logo</string>
    <string name="startDayTogether">Начните день вместе</string>
    <string name="_email">Email</string>
    <string name="_password">Пароль</string>
    <string name="sign_up">Вход</string>
    <string name="_don_t_have_an_account">Еще не зарегистрированы?</string>
    <string name="_sign_in">Регистрация</string>
    <string name="error_please_enter_valid_email">Введите корректный Email</string>
    <string name="error_short_pass">Слишком короткий пароль</string>
    <string name="reset_pas">Сброс пароля</string>
    <string name="reset">Сбросить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sended">Отправлено</string>
    <string name="_name">Имя</string>
    <string name="_regis">Регистрация</string>
    <string name="unknownError">Неизвестная ошибка</string>
    <string name="exit">Выход</string>
    <string name="group">Группа</string>
    <string name="alarms">Будильники</string>
    <string name="awake">Awake</string>
    <string name="delete">delete</string>
    <string name="adduser">addUser</string>
    <string name="invites">Приглашения</string>
    <string name="parent">Родитель</string>
    <string name="child">Ребенок</string>
    <string name="add">Добавить</string>
    <string name="youSureWantToExit">Вы действительно хотите выйти?</string>
</resources>