<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#DCDCDC"
    android:elevation="8dp"
    app:cardUseCompatPadding="true"
    android:minHeight="93dp"
    app:cardCornerRadius="15dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="93dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAvatar"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="Avatar"
                app:srcCompat="@drawable/_02" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:ellipsize="end"
            android:fontFamily="helvetica"
            android:maxLines="1"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewAwake"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toEndOf="@+id/cardViewAvatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/_name" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:fontFamily="helvetica"
            android:maxLines="1"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAvatar"
            app:layout_constraintEnd_toStartOf="@+id/imageViewAwake"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            app:layout_constraintVertical_bias="0.25"
            tools:text="@string/_email" />

        <ImageView
            android:id="@+id/imageViewAwake"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:contentDescription="@string/awake"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.253"
            app:srcCompat="@android:drawable/ic_notification_overlay" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>