<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        android:layout_marginBottom="24dp"
        app:errorTextAppearance="@style/error_appearance"
        app:hintEnabled="false"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewRegister"
        app:passwordToggleEnabled="false"
        app:startIconCheckable="false"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:background="@drawable/input"
            android:fontFamily="helvetica"
            android:hint="@string/_name"
            android:inputType="textPersonName"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_marginBottom="24dp"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:errorTextAppearance="@style/error_appearance"
        app:hintEnabled="false"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_name"
        app:layout_constraintVertical_bias="0.39"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input"
            android:fontFamily="helvetica"
            android:hint="@string/_email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/error_appearance"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_reg"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_email"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="password"
            android:background="@drawable/input"
            android:fontFamily="helvetica"
            android:hint="@string/_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_reg"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/black"
        android:elevation="6dp"
        android:fontFamily="helvetica"
        android:text="@string/_regis"
        android:textStyle="bold"
        android:theme="@style/Theme.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="40dp"
        android:text="@string/_regis"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>