<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fontFamily="helvetica"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="helvetica"
            android:text="@string/reset_pas"
            android:textColor="@color/black"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="204dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/error_appearance"
            app:hintEnabled="false"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReset"
            app:layout_constraintVertical_bias="0.1"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/input"
                android:fontFamily="helvetica"
                android:hint="@string/_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_reset"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/black"
            android:elevation="6dp"
            android:fontFamily="helvetica"
            android:layout_marginTop="24dp"
            android:text="@string/reset"
            android:textStyle="bold"
            android:theme="@style/Theme.AppCompat"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="363dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />




</androidx.constraintlayout.widget.ConstraintLayout>