<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#9CC7F6"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewParentName">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_user_child" />
    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/progressBarMain"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="8dp"
            app:itemIconTint="#19283F"
            app:itemTextColor="#19283F"
            app:menu="@menu/bottom_navigation_menu" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonPopular"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:background="@drawable/button_circle"
        android:backgroundTint="#19283F"
        android:fontFamily="helvetica"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/invites"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/fabAdd"
        app:layout_constraintStart_toEndOf="@+id/fabDelete"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#9CC7F6"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPopular"
        app:layout_constraintEnd_toStartOf="@+id/progressBarMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPopular"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#9CC7F6"
        android:clickable="true"
        android:contentDescription="@string/adduser"
        android:focusable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPopular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBarMain"
        app:layout_constraintTop_toTopOf="@+id/buttonPopular"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textViewParentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="helvetica"
        android:text="Группа пользователя Арсен#3121"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>